--- a/index.html
+++ b/index.html
@@ -5,8 +5,120 @@
     <title>HTML Academy: Техномарт</title>
   </head>
   <body>
+      <header>
+        <section>
+          <a href="#">
+            <img src="" alt="Техномарт">
+          </a>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+          <p>
+            <button type="button"></button>
+            <input type="text" placehilder="Поиск:">
+          </p>
 
+          <p>
+            <span>Закладки:</span>
+            <span>0</span>
+          </p>
+
+          <p>
+            <span>Закладки:</span>
+            <span>0</span>
+          </p>
+
+          <a href="">Оформить заказ</a>
+        </section>
+
+        <section>
+          <h1>Интернет-магазин <br> строительных материалов <br> и инструментов для ремонта</h1>
+          <p>+7 (812) 555-05-55</p>
+          <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+          <p>
+            <a href="">Войти</a>
+            <a href="">Регистрация</a>
+          </p>
+        </section>
+
+        <nav>
+          <ul>
+            <li><a href="">Главная</a></li>
+            <li><a href="">Компания</a></li>
+            <li><a href="">Каталог</a></li>
+            <li><a href="">Новости</a></li>
+            <li><a href="">Спецпредложения</a></li>
+            <li><a href="">Доставка</a></li>
+            <li><a href="">Контакты</a></li>
+          </ul>
+        </nav>
+      </header>
+
+      <main>
+        <!--  -->
+        <section>
+          <h2>Компания «Техномарт»</h2>
+          <p>
+            Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и 
+            строительства не оставит равнодушными любителей сэкономить на гастарбайтерах. 
+          </p>
+          <p>
+            Мы можем доставить ваш товар в самые отдаленные точки России! <br>
+            Техномарт работает со многими транспортными компаниями: 
+          </p>
+          <ul>
+            <li>Деловые линии</li>
+            <li>Автотрейдинг</li>
+            <li>ЖелДорЭкспедиция</li>
+          </ul>
+          <button type="button">Подробнее о компании</button>
+        </section>
+
+        <section>
+          <h2>Контакты</h2>
+          <p>Вы можете забрать товар сами, <br>
+            заехав в наш офис:</p>
+          <img src="" alt="Карта">
+          <button>Заблудились? Напишите нам!</button>
+        </section>
+      </main>
+
+      <footer>
+        <section>
+          <p>
+            <a href=""><img src="" alt="Техномарт"></a>
+            <span>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 +7 (812) 555-05-55</span>
+          </p>
+
+          <ul>
+            <li><a href="">Компания</a></li>
+            <li><a href="">Новости</a></li>
+            <li><a href="">Каталог</a></li>
+            <li><a href="">Доставка</a></li>
+            <li><a href="">Контакты</a></li>
+            <li><a href="">Материалы</a></li>
+            <li><a href="">Техника</a></li>
+            <li><a href="">Инструмент</a></li>
+            <li><a href="">Спецпредложения</a></li>
+          </ul>
+        </section>
+
+        <section>
+          <p>© 2010–2019 Компания «Техномарт» Все права защищены</p>
+          <p>
+            <ul>
+              <li>Вконтакте</li>
+              <li>Фейсбук</li>
+              <li>Инстаграм</li>
+            </ul>
+          </p>
+          <p>
+            Обратная связь:
+            <span>mail@htmlacademy.ru</span>
+          </p>
+          <p>
+            Разработано - 
+            <span>htmlacademy.ru</span>
+          </p>
+        </section>
+      </footer>
   </body>
 </html>
