Личный проект: дополняем разметку

--- a/index.html
+++ b/index.html
@@ -53,7 +53,168 @@
       </header>
 
       <main>
-        <!--  -->
+        <section>
+          <h2>Категории</h2>
+          <ul>
+            <li>
+              <a href="">
+                <p>
+                  <h3>Материалы</h3>
+                  <span>На любой вкус</span>
+                </p>
+                <img src="" alt="Иконка">
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <p>
+                  <h3>Инструмент</h3>
+                  <span>На все случаи</span>
+                </p>
+                <img src="" alt="Иконка">
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <p>
+                  <h3>Техника</h3>
+                  <span>Для стройки</span>
+                </p>
+                <img src="" alt="Иконка">
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <p>
+                  <h3>Скидки 50%</h3>
+                  <span>На 350 товаров</span>
+                </p>
+                <img src="" alt="Иконка">
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <p>
+                  <h3>Доставка</h3>
+                  <span>Бесплатно</span>
+                </p>
+                <img src="" alt="Иконка">
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <p>
+                  <h3>Перфораторы</h3>
+                  <span>Настоящие мужские игрушки</span>
+                </p>
+                <a href="">Открыть каталог</a>
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <p>
+                  <h3>Дрели</h3>
+                  <span>Соседям на радость</span>
+                </p>
+                <a href="">Открыть каталог</a>
+              </a>
+            </li>
+          </ul>
+        </section>
+
+        <section>
+          <h2>Популярные товары</h2>
+          <a href="">Все популярные товары</a>
+
+          <ul>
+            <li>
+              <h3><a>Перфоратор BOSCH BFG 9000</a></h3>
+              <a href=""><img src="" alt="Перфоратор BOSCH BFG 9000"></a>
+              <span>32500 Р.</span>
+              <a href="">25 500 Р.</a>
+            </li>
+            <li>
+              <h3><a>Перфоратор BOSCH BFG 3000</a></h3>
+              <a href=""><img src="" alt="Перфоратор BOSCH BFG 3000"></a>
+              <span>22500 Р.</span>
+              <a href="">15 500 Р.</a>
+            </li>
+            <li>
+              <h3><a>Перфоратор BOSCH BFG 6000</a></h3>
+              <a href=""><img src="" alt="Перфоратор BOSCH BFG 6000"></a>
+              <span>30500 Р.</span>
+              <a href="">25 500 Р.</a>
+            </li>
+            <li>
+              <h3><a>Перфоратор BOSCH BFG 2000</a></h3>
+              <a href=""><img src="" alt="Перфоратор BOSCH BFG 2000"></a>
+              <span></span>
+              <a href="">12500 Р.</a>
+            </li>
+          </ul>
+        </section>
+
+        <section>
+          <h2>Популярные производители</h2>
+          <a href="">Все производители</a>
+
+          <ul>
+            <li><a href=""><img src="" alt="Bosch"></a></li>
+            <li><a href=""><img src="" alt="Makita"></a></li>
+            <li><a href=""><img src="" alt="DeWault"></a></li>
+            <li><a href=""><img src="" alt="Интерскол"></a></li>
+            <li><a href=""><img src="" alt="Hitachi"></a></li>
+            <li><a href=""><img src="" alt="LG"></a></li>
+            <li><a href=""><img src="" alt="AEG"></a></li>
+            <li><a href=""><img src="" alt="metabo"></a></li>
+          </ul>
+        </section>
+
+        <section>
+          <h2>Сервисы</h2>
+          <p>
+            Хороший интернет-магазин отличается от плохого не только ценами! <br>
+            Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.
+          </p>
+          <ul>
+            <li><a href="">Доставка</a></li>
+            <li><a href="">Гарантия</a></li>
+            <li><a href="">Кредит</a></li>
+          </ul>
+          <ul>
+            <li>
+              <h3>Доставка</h3>
+              <p>
+                Мы с удовольствием доставим ваш товар прямо <br>
+                к вашему подъезду совершенно бесплатно! <br>
+                Ведь мы неплохо заработаем, <br>
+                поднимая его на ваш этаж!
+              </p>
+              <img src="" alt="Доставка">
+            </li>
+            <li>
+              <h3>Гарантия</h3>
+              <p>
+                Если купленный у нас товар поломается или заискрит, <br>
+                а также в случае пожара, спровоцированного его возгоранием, <br>
+                вы всегда можете быть уверены в нашей гарантии. Мы обменяем <br>
+                сгоревший товар на новый. <br>
+                Дом уж восстановите как-нибудь сами.
+              </p>
+              <img src="" alt="Гарантия">
+            </li>
+            <li>
+              <h3>Кредит</h3>
+              <p>
+                Залезть в долговую яму стало проще! <br>
+                Кредитные консультанты придут вам на помощь.
+              </p>
+              <a href="">Оставить заявку</a>
+              <img src="" alt="Кредит"> 
+            </li>
+          </ul>
+        </section>
+        
         <section>
           <h2>Компания «Техномарт»</h2>
           <p>
@@ -69,7 +230,7 @@
             <li>Автотрейдинг</li>
             <li>ЖелДорЭкспедиция</li>
           </ul>
-          <button type="button">Подробнее о компании</button>
+          <a href="">Подробнее о компании</a>
         </section>
 
         <section>
