--- a/catalog.html
+++ b/catalog.html
@@ -109,13 +109,13 @@
             <ul>
                 <li>
                     <h3><a href="">Перфоратор BOSCH BFG 3000</a></h3>
-                    <a href=""><img src="" alt="Перфоратор BOSCH BFG 3000"></a>
+                    <a href=""><img src="img/Perforator_1.jpg" alt="Перфоратор BOSCH BFG 3000"></a>
                     <span>22500 Р.</span>
                     <a href="">15500 Р</a>
                 </li>
                 <li>
                     <h3><a href="">Перфоратор BOSCH BFG 6000</a></h3>
-                    <a href=""><img src="" alt="Перфоратор BOSCH BFG 6000"></a>
+                    <a href=""><img src="img/Perforator_2.jpg" alt="Перфоратор BOSCH BFG 6000"></a>
                     <span>30500 Р.</span>
                     <a href="">25500 Р</a>
                 </li>
@@ -128,37 +128,37 @@
                 </li>
                 <li>
                     <h3><a href="">Перфоратор BOSCH BFG 3000</a></h3>
-                    <a href=""><img src="" alt="Перфоратор BOSCH BFG 3000"></a>
+                    <a href=""><img src="img/Perforator_1.jpg" alt="Перфоратор BOSCH BFG 3000"></a>
                     <span>22500 Р.</span>
                     <a href="">15500 Р</a>
                 </li>
                 <li>
                     <h3><a href="">Перфоратор BOSCH BFG 6000</a></h3>
-                    <a href=""><img src="" alt="Перфоратор BOSCH BFG 6000"></a>
+                    <a href=""><img src="img/Perforator_2.jpg" alt="Перфоратор BOSCH BFG 6000"></a>
                     <span>30500 Р.</span>
                     <a href="">25500 Р</a>
                 </li>
                 <li>
                     <h3><a href="">Перфоратор BOSCH BFG 2000</a></h3>
-                    <a href=""><img src="" alt="Перфоратор BOSCH BFG 3000"></a>
+                    <a href=""><img src="img/Perforator_3.jpg" alt="Перфоратор BOSCH BFG 3000"></a>
                     <span></span>
                     <a href="">12500 Р</a>
                 </li>
                 <li>
                     <h3><a href="">Перфоратор BOSCH BFG 3000</a></h3>
-                    <a href=""><img src="" alt="Перфоратор BOSCH BFG 3000"></a>
+                    <a href=""><img src="img/Perforator_1.jpg" alt="Перфоратор BOSCH BFG 3000"></a>
                     <span>22500 Р.</span>
                     <a href="">15500 Р</a>
                 </li>
                 <li>
                     <h3><a href="">Перфоратор BOSCH BFG 6000</a></h3>
-                    <a href=""><img src="" alt="Перфоратор BOSCH BFG 6000"></a>
+                    <a href=""><img src="img/Perforator_2.jpg" alt="Перфоратор BOSCH BFG 6000"></a>
                     <span>30500 Р.</span>
                     <a href="">25500 Р</a>
                 </li>
                 <li>
                     <h3><a href="">Перфоратор BOSCH BFG 2000</a></h3>
-                    <a href=""><img src="" alt="Перфоратор BOSCH BFG 3000"></a>
+                    <a href=""><img src="img/Perforator_3.jpg" alt="Перфоратор BOSCH BFG 3000"></a>
                     <span></span>
                     <a href="">12500 Р</a>
                 </li>
