--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
       </main>
 
       <footer>
-        <section>
+        <div>
           <p>
             <a href=""><img src="" alt="Техномарт"></a>
             <span>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 +7 (812) 555-05-55</span>
@@ -260,9 +260,9 @@
             <li><a href="">Инструмент</a></li>
             <li><a href="">Спецпредложения</a></li>
           </ul>
-        </section>
+        </div>
 
-        <section>
+        <div>
           <p>© 2010–2019 Компания «Техномарт» Все права защищены</p>
           <p>
             <ul>
@@ -279,7 +279,7 @@
             Разработано - 
             <span>htmlacademy.ru</span>
           </p>
-        </section>
+        </div>
       </footer>
   </body>
 </html>
