Личный проект: начинаем готовить графику (2)

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <header>
         <section>
           <a href="#">
-            <img src="" alt="Техномарт">
+            <img src="img/logo-technomart.svg" alt="Техномарт">
           </a>
 
           <p>
@@ -43,7 +43,7 @@
           <ul>
             <li><a href="">Главная</a></li>
             <li><a href="">Компания</a></li>
-            <li><a href="">Каталог</a></li>
+            <li><a href="catalog.html">Каталог</a></li>
             <li><a href="">Новости</a></li>
             <li><a href="">Спецпредложения</a></li>
             <li><a href="">Доставка</a></li>
@@ -237,7 +237,7 @@
           <h2>Контакты</h2>
           <p>Вы можете забрать товар сами, <br>
             заехав в наш офис:</p>
-          <img src="" alt="Карта">
+          <img src="img/map.jpg" wigth="300" height="158" alt="Карта">
           <button>Заблудились? Напишите нам!</button>
         </section>
       </main>
@@ -245,7 +245,7 @@
       <footer>
         <div>
           <p>
-            <a href=""><img src="" alt="Техномарт"></a>
+            <a href=""><img src="img/logo-technomart.svg" alt="Техномарт"></a>
             <span>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 +7 (812) 555-05-55</span>
           </p>
 
@@ -266,7 +266,7 @@
           <p>© 2010–2019 Компания «Техномарт» Все права защищены</p>
           <p>
             <ul>
-              <li>Вконтакте</li>
+              <li>Вконтакте"></li>
               <li>Фейсбук</li>
               <li>Инстаграм</li>
             </ul>
