--- a/catalog.html
+++ b/catalog.html
@@ -10,7 +10,7 @@
     <header>
         <section>
           <a href="#">
-            <img src="" alt="Техномарт">
+            <img src="img/logo-technomart.svg" alt="Техномарт">
           </a>
 
           <p>
@@ -46,7 +46,7 @@
 
         <nav>
           <ul>
-            <li><a href="">Главная</a></li>
+            <li><a href="index.html">Главная</a></li>
             <li><a href="">Компания</a></li>
             <li><a href="">Каталог</a></li>
             <li><a href="">Новости</a></li>
@@ -109,13 +109,13 @@
             <ul>
                 <li>
                     <h3><a href="">Перфоратор BOSCH BFG 3000</a></h3>
-                    <a href=""><img src="img/Perforator_1.jpg" alt="Перфоратор BOSCH BFG 3000"></a>
+                    <a href=""><img src="img/Perforator_1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000"></a>
                     <span>22500 Р.</span>
                     <a href="">15500 Р</a>
                 </li>
                 <li>
                     <h3><a href="">Перфоратор BOSCH BFG 6000</a></h3>
-                    <a href=""><img src="img/Perforator_2.jpg" alt="Перфоратор BOSCH BFG 6000"></a>
+                    <a href=""><img src="img/Perforator_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000"></a>
                     <span>30500 Р.</span>
                     <a href="">25500 Р</a>
                 </li>
@@ -128,37 +128,37 @@
                 </li>
                 <li>
                     <h3><a href="">Перфоратор BOSCH BFG 3000</a></h3>
-                    <a href=""><img src="img/Perforator_1.jpg" alt="Перфоратор BOSCH BFG 3000"></a>
+                    <a href=""><img src="img/Perforator_1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000"></a>
                     <span>22500 Р.</span>
                     <a href="">15500 Р</a>
                 </li>
                 <li>
                     <h3><a href="">Перфоратор BOSCH BFG 6000</a></h3>
-                    <a href=""><img src="img/Perforator_2.jpg" alt="Перфоратор BOSCH BFG 6000"></a>
+                    <a href=""><img src="img/Perforator_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000"></a>
                     <span>30500 Р.</span>
                     <a href="">25500 Р</a>
                 </li>
                 <li>
                     <h3><a href="">Перфоратор BOSCH BFG 2000</a></h3>
-                    <a href=""><img src="img/Perforator_3.jpg" alt="Перфоратор BOSCH BFG 3000"></a>
+                    <a href=""><img src="img/Perforator_3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000"></a>
                     <span></span>
                     <a href="">12500 Р</a>
                 </li>
                 <li>
                     <h3><a href="">Перфоратор BOSCH BFG 3000</a></h3>
-                    <a href=""><img src="img/Perforator_1.jpg" alt="Перфоратор BOSCH BFG 3000"></a>
+                    <a href=""><img src="img/Perforator_1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000"></a>
                     <span>22500 Р.</span>
                     <a href="">15500 Р</a>
                 </li>
                 <li>
                     <h3><a href="">Перфоратор BOSCH BFG 6000</a></h3>
-                    <a href=""><img src="img/Perforator_2.jpg" alt="Перфоратор BOSCH BFG 6000"></a>
+                    <a href=""><img src="img/Perforator_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000"></a>
                     <span>30500 Р.</span>
                     <a href="">25500 Р</a>
                 </li>
                 <li>
                     <h3><a href="">Перфоратор BOSCH BFG 2000</a></h3>
-                    <a href=""><img src="img/Perforator_3.jpg" alt="Перфоратор BOSCH BFG 3000"></a>
+                    <a href=""><img src="img/Perforator_3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000"></a>
                     <span></span>
                     <a href="">12500 Р</a>
                 </li>
@@ -187,7 +187,7 @@
     <footer>
         <section>
           <p>
-            <a href=""><img src="" alt="Техномарт"></a>
+            <a href=""><img src="img/logo-technomart.svg" alt="Техномарт"></a>
             <span>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 +7 (812) 555-05-55</span>
           </p>
 
