Личный проект: продолжаем подготовку графики

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
         <nav>
           <ul>
-            <li><a href="">Главная</a></li>
+            <li><a href="#">Главная</a></li>
             <li><a href="">Компания</a></li>
             <li><a href="catalog.html">Каталог</a></li>
             <li><a href="">Новости</a></li>
@@ -58,66 +58,43 @@
           <ul>
             <li>
               <a href="">
-                <p>
-                  <h3>Материалы</h3>
-                  <span>На любой вкус</span>
-                </p>
-                <img src="" alt="Иконка">
+                <h3>Материалы</h3>
+                <span>На любой вкус</span>
               </a>
             </li>
             <li>
               <a href="">
-                <p>
-                  <h3>Инструмент</h3>
-                  <span>На все случаи</span>
-                </p>
-                <img src="" alt="Иконка">
+                <h3>Инструмент</h3>
+                <span>На все случаи</span>
               </a>
             </li>
             <li>
               <a href="">
-                <p>
-                  <h3>Техника</h3>
-                  <span>Для стройки</span>
-                </p>
-                <img src="" alt="Иконка">
+                <h3>Техника</h3>
+                <span>Для стройки</span>
               </a>
             </li>
             <li>
               <a href="">
-                <p>
-                  <h3>Скидки 50%</h3>
-                  <span>На 350 товаров</span>
-                </p>
-                <img src="" alt="Иконка">
+                <h3>Скидки 50%</h3>
+                <span>На 350 товаров</span>
               </a>
             </li>
             <li>
               <a href="">
-                <p>
-                  <h3>Доставка</h3>
-                  <span>Бесплатно</span>
-                </p>
-                <img src="" alt="Иконка">
+                <h3>Доставка</h3>
+                <span>Бесплатно</span>
               </a>
             </li>
             <li>
-              <a href="">
-                <p>
-                  <h3>Перфораторы</h3>
-                  <span>Настоящие мужские игрушки</span>
-                </p>
+                <h3>Перфораторы</h3>
+                <span>Настоящие мужские игрушки</span>
                 <a href="">Открыть каталог</a>
-              </a>
             </li>
             <li>
-              <a href="">
-                <p>
-                  <h3>Дрели</h3>
-                  <span>Соседям на радость</span>
-                </p>
+                <h3>Дрели</h3>
+                <span>Соседям на радость</span>
                 <a href="">Открыть каталог</a>
-              </a>
             </li>
           </ul>
         </section>
@@ -129,25 +106,25 @@
           <ul>
             <li>
               <h3><a>Перфоратор BOSCH BFG 9000</a></h3>
-              <a href=""><img src="" alt="Перфоратор BOSCH BFG 9000"></a>
+              <a href=""><img src="img/Perforator_4.jpg" alt="Перфоратор BOSCH BFG 9000"></a>
               <span>32500 Р.</span>
               <a href="">25 500 Р.</a>
             </li>
             <li>
               <h3><a>Перфоратор BOSCH BFG 3000</a></h3>
-              <a href=""><img src="" alt="Перфоратор BOSCH BFG 3000"></a>
+              <a href=""><img src="img/Perforator_1.jpg" alt="Перфоратор BOSCH BFG 3000"></a>
               <span>22500 Р.</span>
               <a href="">15 500 Р.</a>
             </li>
             <li>
               <h3><a>Перфоратор BOSCH BFG 6000</a></h3>
-              <a href=""><img src="" alt="Перфоратор BOSCH BFG 6000"></a>
+              <a href=""><img src="img/Perforator_2.jpg" alt="Перфоратор BOSCH BFG 6000"></a>
               <span>30500 Р.</span>
               <a href="">25 500 Р.</a>
             </li>
             <li>
               <h3><a>Перфоратор BOSCH BFG 2000</a></h3>
-              <a href=""><img src="" alt="Перфоратор BOSCH BFG 2000"></a>
+              <a href=""><img src="img/Perforator_3.jpg" alt="Перфоратор BOSCH BFG 2000"></a>
               <span></span>
               <a href="">12500 Р.</a>
             </li>
@@ -159,14 +136,14 @@
           <a href="">Все производители</a>
 
           <ul>
-            <li><a href=""><img src="" alt="Bosch"></a></li>
-            <li><a href=""><img src="" alt="Makita"></a></li>
-            <li><a href=""><img src="" alt="DeWault"></a></li>
-            <li><a href=""><img src="" alt="Интерскол"></a></li>
-            <li><a href=""><img src="" alt="Hitachi"></a></li>
-            <li><a href=""><img src="" alt="LG"></a></li>
-            <li><a href=""><img src="" alt="AEG"></a></li>
-            <li><a href=""><img src="" alt="metabo"></a></li>
+            <li><a href=""><img src="img/bosch.png" alt="Bosch"></a></li>
+            <li><a href=""><img src="img/Makita.png" alt="Makita"></a></li>
+            <li><a href=""><img src="img/DeWALT.png" alt="DeWault"></a></li>
+            <li><a href=""><img src="img/interscol.png" alt="Интерскол"></a></li>
+            <li><a href=""><img src="img/Hitachi.png" alt="Hitachi"></a></li>
+            <li><a href=""><img src="img/LG.png" alt="LG"></a></li>
+            <li><a href=""><img src="img/AEG.png" alt="AEG"></a></li>
+            <li><a href=""><img src="img/Metabo.png" alt="metabo"></a></li>
           </ul>
         </section>
 
@@ -190,7 +167,6 @@
                 Ведь мы неплохо заработаем, <br>
                 поднимая его на ваш этаж!
               </p>
-              <img src="" alt="Доставка">
             </li>
             <li>
               <h3>Гарантия</h3>
@@ -201,7 +177,6 @@
                 сгоревший товар на новый. <br>
                 Дом уж восстановите как-нибудь сами.
               </p>
-              <img src="" alt="Гарантия">
             </li>
             <li>
               <h3>Кредит</h3>
@@ -209,8 +184,7 @@
                 Залезть в долговую яму стало проще! <br>
                 Кредитные консультанты придут вам на помощь.
               </p>
-              <a href="">Оставить заявку</a>
-              <img src="" alt="Кредит"> 
+              <a href="">Оставить заявку</a> 
             </li>
           </ul>
         </section>
@@ -237,7 +211,7 @@
           <h2>Контакты</h2>
           <p>Вы можете забрать товар сами, <br>
             заехав в наш офис:</p>
-          <img src="img/map.jpg" wigth="300" height="158" alt="Карта">
+          <img src="img/map.jpg" wigth="300" height="158" alt="Карта c нашим адресом: г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
           <button>Заблудились? Напишите нам!</button>
         </section>
       </main>
@@ -245,14 +219,14 @@
       <footer>
         <div>
           <p>
-            <a href=""><img src="img/logo-technomart.svg" alt="Техномарт"></a>
-            <span>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 +7 (812) 555-05-55</span>
+            <a href="#"><img src="img/logo-technomart.svg" alt="Техномарт"></a>
+            <span>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br> +7 (812) 555-05-55</span>
           </p>
 
           <ul>
             <li><a href="">Компания</a></li>
             <li><a href="">Новости</a></li>
-            <li><a href="">Каталог</a></li>
+            <li><a href="catalog.html">Каталог</a></li>
             <li><a href="">Доставка</a></li>
             <li><a href="">Контакты</a></li>
             <li><a href="">Материалы</a></li>
@@ -266,18 +240,18 @@
           <p>© 2010–2019 Компания «Техномарт» Все права защищены</p>
           <p>
             <ul>
-              <li>Вконтакте"></li>
-              <li>Фейсбук</li>
-              <li>Инстаграм</li>
+              <li><a href="">Вконтакте</a></li>
+              <li><a href="">Фейсбук</a></li>
+              <li><a href="">Инстаграм</a></li>
             </ul>
           </p>
           <p>
             Обратная связь:
-            <span>mail@htmlacademy.ru</span>
+            <a href="https://mail@htmlacademy.ru">mail@htmlacademy.ru</a>
           </p>
           <p>
             Разработано - 
-            <span>htmlacademy.ru</span>
+            <a href="https://htmlacademy.ru">htmlacademy.ru</a>
           </p>
         </div>
       </footer>
