--- a/catalog.html
+++ b/catalog.html
@@ -163,15 +163,12 @@
                     <a href="">12500 Р</a>
                 </li>
             </ul>
-        </section>
-
-        <section>
             <ul>
                 <li><a href="">1</a></li>
                 <li><a href="">2</a></li>
                 <li><a href="">3</a></li>
+                <li><a href="">Следующая</a></li>
             </ul>
-            <a href="">Следующая</a>
         </section>
 
         <section>
@@ -185,7 +182,7 @@
     </main>
 
     <footer>
-        <section>
+        <div>
           <p>
             <a href=""><img src="img/logo-technomart.svg" alt="Техномарт"></a>
             <span>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 +7 (812) 555-05-55</span>
@@ -202,26 +199,26 @@
             <li><a href="">Инструмент</a></li>
             <li><a href="">Спецпредложения</a></li>
           </ul>
-        </section>
+        </div>
 
-        <section>
+        <div>
           <p>© 2010–2019 Компания «Техномарт» Все права защищены</p>
           <p>
             <ul>
-              <li>Вконтакте</li>
-              <li>Фейсбук</li>
-              <li>Инстаграм</li>
+              <li><a href="">Вконтакте</a></li>
+              <li><a href="">Фейсбук</a></li>
+              <li><a href="">Инстаграм</a></li>
             </ul>
           </p>
           <p>
             Обратная связь:
-            <span>mail@htmlacademy.ru</span>
+            <a href="https://mail@htmlacademy.ru">mail@htmlacademy.ru</a>
           </p>
           <p>
             Разработано - 
-            <span>htmlacademy.ru</span>
+            <a href="https://htmlacademy.ru">htmlacademy.ru</a>
           </p>
-        </section>
+        </div>
       </footer>
 </body>
 </html>
