Личный проект: завершаем разметку

--- a/catalog.html
+++ b/catalog.html
@@ -173,7 +173,7 @@
                 <img src="img/Perforator_1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
               </a>
               <span>22500 Р.</span>
-              <a href="">15500 Р</a>
+              <a href="#">15500 Р</a>
             </li>
             <li>
               <a href="#">
@@ -181,7 +181,7 @@
                 <img src="img/Perforator_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
               </a>
               <span>30500 Р.</span>
-              <a href="">25500 Р</a>
+              <a href="#">25500 Р</a>
             </li>
             <li>
               <h3><a href="#">Перфоратор BOSCH BFG 2000</a></h3>
@@ -195,7 +195,7 @@
                 <img src="img/Perforator_1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
               </a>
               <span>22500 Р.</span>
-              <a href="">15500 Р</a>
+              <a href="#">15500 Р</a>
             </li>
             <li>
               <a href="#">
@@ -203,7 +203,7 @@
                 <img src="img/Perforator_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
               </a>
               <span>30500 Р.</span>
-              <a href="">25500 Р</a>
+              <a href="#">25500 Р</a>
             </li>
             <li>
               <a href="#">
@@ -211,7 +211,7 @@
                 <img src="img/Perforator_3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
               </a>
               <span></span>
-              <a href="">12500 Р</a>
+              <a href="#">12500 Р</a>
             </li>
             <li>
               <a href="#">
@@ -219,7 +219,7 @@
                 <img src="img/Perforator_1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
               </a>
               <span>22500 Р.</span>
-              <a href="">15500 Р</a>
+              <a href="#">15500 Р</a>
             </li>
             <li>
               <a href="#">
@@ -227,7 +227,7 @@
                 <img src="img/Perforator_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
               </a>
               <span>30500 Р.</span>
-              <a href="">25500 Р</a>
+              <a href="#">25500 Р</a>
             </li>
             <li>
               <a href="#">
@@ -235,7 +235,7 @@
                 <img src="img/Perforator_3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
               </a>
               <span></span>
-              <a href="">12500 Р</a>
+              <a href="#">12500 Р</a>
             </li>
           </ul>
         </section>
