16. Личный проект: завершаем строить сетку на флексах

--- a/catalog.html
+++ b/catalog.html
@@ -116,11 +116,11 @@
           <fieldset class="filter-form__fieldset fieldset-price">
             <legend class="fieldset-price__legend">Цена:</legend>
               <div class="fieldset-price__range"></div>
-              <div class="fieldset-price__value">
+              <div class="fieldset-price__value min">
                 <input class="fieldset-price__input" type="text" name="min-price" placeholder="0" id="filter-min-price">
                 <label class="fieldset-price__label visually-hidden" for="filter-min-price">Минимальная цена</label>
               </div>
-              <div class="fieldset-price__value">
+              <div class="fieldset-price__value max">
                 <input class="fieldset-price__input" type="text" name="max-price" placeholder="30000" id="filter-max-price">
                 <label class="fieldset-price__label visually-hidden" for="filter-max-price">Максимальная цена</label>
               </div>
@@ -345,19 +345,19 @@
           </ul>
         </section>
       </div>
+    </div>
 
       <section class="catalog-page__description catalog-description">
         <div class="wrap">
           <h2 class="catalog-description__headin">Пара слов о перфораторах</h2>
   
           <p class="catalog-description__text text">
-              Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.
-              Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка. 
+              Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне. <br>
+              Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка. <br>
               В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.
           </p>
         </div>
       </section>
-    </div>
   </main>
 
   <footer class="footer">
