--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
                 <h3 class="categories-item__heading">Скидки 50%</h3>
                 <a class="categories-item__link" href="#">На 350 товаров</a>
               </li>
+              <li class="break"></li>
               <li class="categories__item categories-item">
                 <h3 class="categories-item__heading">Доставка</h3>
                 <a class="categories-item__link" href="#">Бесплатно</a>
