Личный проект: продолжаем оформление декоративных элементов

--- a/catalog.html
+++ b/catalog.html
@@ -222,10 +222,16 @@
                   <li class="fieldset-growth__item">
                     <label class="fieldset-growth__label visually-hidden" for="growth-increase">По возрастанию</label>
                     <input class="fieldset-growth__input" type="radio" name="growth" value="increase" id="growth-increase">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
+                      <path fill="#231F20" d="M5.5 0L0 10h11z"/>
+                    </svg>
                   </li>
-                  <li>
+                  <li class="fieldset-growth__item">
                     <label class="fieldset-growth__label visually-hidden" for="growth-decrease">По убиыванию</label>
                     <input class="fieldset-growth__input" type="radio" name="growth" value="decrease" id="growth-decrease">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
+                      <path fill="#231F20" d="M5.5 10L0 0h11"/>
+                    </svg>
                   </li>
                 </ul>
               </fieldset>
