--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <h2 class="categories__heading visually-hidden">Категории</h2>
             
             <ul class="categories__list">
-              <li class="categories__item categories-item">
+              <li class="categories__item categories-item new">
                 <h3 class="categories-item__heading">Материалы</h3>
                 <a class="categories-item__link"  href="#">На любой вкус</a>
               </li>
@@ -138,6 +138,9 @@
                 </div>
                 <a class="slider-item__link button" href="catalog.html">Открыть каталог</a>
               </div>
+
+              <button class="slider__btn-left" type="button"></button>
+              <button class="slider__btn-right" type="button"></button>
             </div>
           </div>
         </section>
