Личный проект: оживляем интерактивные элементы (2)

--- a/index.html
+++ b/index.html
@@ -491,9 +491,9 @@
         <button class="add-popup__close" type="button">Закрыть</button>
       </section>
 
-      <script src="/js/script.js"></script>
-      <script src="/js/write-us.js"></script>
-      <script src="/js/services.js"></script>
-      <script src="/js/slider.js"></script>
+      <script src="js/script.js"></script>
+      <script src="js/write-us.js"></script>
+      <script src="js/services.js"></script>
+      <script src="js/slider.js"></script>
   </body>
 </html>
