--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>HTML Academy: Техномарт</title>
     <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700|PT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
   </head>
 
   <body>
@@ -355,9 +355,9 @@
               <p class="company-contacts__text text">Вы можете забрать товар сами, <br>
                 заехав в наш офис:</p>
               <img class="company-contacts__map" src="img/map.jpg" width="300" height="158" alt="Карта c нашим адресом: г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
-              <button class="company-contacts__button button" type="button">
+              <a class="company-contacts__button button" href="writeus.html">
                 Заблудились? Напишите нам!
-              </button>
+              </a>
             </div>
           </div>
         </section>
@@ -492,9 +492,9 @@
         <button class="add-popup__close" type="button">Закрыть</button>
       </section>
 
-      <script src="js/script.js"></script>
-      <script src="js/write-us.js"></script>
-      <script src="js/services.js"></script>
-      <script src="js/slider.js"></script>
+      <script src="js/script.min.js"></script>
+      <script src="js/write-us.min.js"></script>
+      <script src="js/services.min.js"></script>
+      <script src="js/slider.min.js"></script>
   </body>
 </html>
