--- a/catalog.html
+++ b/catalog.html
@@ -60,7 +60,7 @@
         </h1>
 
         <div class="header-info__contacts header-contacts">
-          <a href="tel:+78125550555" class="header-contacts__phone">+7 (812) 555-05-55</a>
+          <a class="header-contacts__phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
           <span class="header-contacts__address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</span>
         </div>
         
